--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form enctype='multipart/form-data' method="POST">
+        <form enctype="multipart/form-data" method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">LogIn</legend>
@@ -16,10 +16,12 @@
                     function alertFunction(){
                         alert("PUT YOUR FACE CLOSE TO THE CAM TO AUTHENTICATE.");
                     }
+                    
                 </script> -->
                 Reset Password?
             </div>
         </form>
+
         <div class="border-top pt-3">
             <small class="text-muted">
                 Don't Have An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
