--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,6 +7,7 @@
       <div class="media-body">
         <h2 class="account-heading">{{ user.username }}</h2>
         <p class="text-secondary">{{ user.email }}</p>
+        <a href="{% url 'profile_update' %}">Edit Profile</a>
       </div>
     </div>
     <!-- FORM HERE -->
