--- a/company/templates/company/base.html
+++ b/company/templates/company/base.html
@@ -1,8 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html  lang="en">
 <head>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,23 +11,23 @@
     <link rel="stylesheet" type="text/css" href="{% static 'company/main.css'%}">
 
     {% if title %}
-        <title>Jazmín - {{ title }}</title>
+        <title>Imminent Services Ltd - {{ title }}</title>
     {% else %}
-        <title> Jazmín </title>
+        <title> Imminent Services Ltd </title>
     {% endif %}
 </head>
 <body>
-    <header class="site-header">
+   <header class="site-header">
             <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                 <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'company:home' %}">Jazmín services Ltd.</a>
+                <a class="navbar-brand mr-4" href="{% url 'company:home' %}">Imminent Solutions Ltd.</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link" href="{% url 'company:home' %}">Home</a>
-                    <a class="nav-item nav-link" href="{% url 'company:about' %}">About</a>
+                    <!-- <a class="nav-item nav-link" href="{% url 'company:about' %}">About</a> -->
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
@@ -57,19 +56,6 @@
         {% endfor %}
         {% endif %}
         {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-        <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-            </ul>
-            </p>
-        </div>
         </div>
     </div>
     </main>
