--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,6 +10,7 @@
                 {{ profile_form|crispy }}
                 <!-- Browse a pic:<input type="file" name="authpic" accept="image/*"><br>
                 The picture must show your face clearly as it is used for authentication. -->
+                <em style="color:rgb(255, 102, 0);font-size:15px">*The picture must have your clear face as it is used for authentication.</em><br>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
