webcam image capture was put in image upload page

--- a/company/templates/company/base.html
+++ b/company/templates/company/base.html
@@ -15,6 +15,7 @@
     {% else %}
         <title> Imminent Services Ltd </title>
     {% endif %}
+    {% block headcontent %}{% endblock headcontent%}
 </head>
 <body>
    <header class="site-header">
