--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -8,13 +8,9 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
                 {{ user_form|crispy }}
-                {{ profile_form|crispy }}
-                <!-- Browse a pic:<input type="file" name="authpic" accept="image/*"><br>
-                The picture must show your face clearly as it is used for authentication. -->
-                <em style="color:#ff6600;font-size:15px">*The picture must have your clear face as it is used for authentication.</em><br>
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Next</button>
             </div>
         </form>
         <div class="border-top pt-3">
