--- a/company/templates/company/index-slides.html
+++ b/company/templates/company/index-slides.html
@@ -77,13 +77,13 @@
             <a href="mailto:#0">hello@imminent.com</a>
         </div>
 
-        <div class="navbar-nav">
+        <div>
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'profile' %}">My profile</a>
-            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>  
+            <a style="float:inline-start;color:whitesmoke;" href="{% url 'profile' %}">My profile</a>
+            <a style="float: right;" class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>  
             {% else %}
-            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+            <a style="float: right;" class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+            <a style="float: right;" class="nav-item nav-link" href="{% url 'register' %}">Register</a>
             {% endif %}
         </div>
     </header> <!-- end s-header -->
@@ -95,8 +95,8 @@
 
         <div class="intro-slider">
             <div class="intro-slider-img bg-opacity-40" style="background-image: url('static/company/images/slides/slide-01.jpg');"></div>
-            <div class="intro-slider-img" style="background-image: url('static/company/images/slides/slide-01.jpg');"></div>
-            <div class="intro-slider-img" style="background-image: url('static/company/images/slides/slide-01.jpg');"></div>
+            <div class="intro-slider-img" style="background-image: url('static/company/images/slides/slide-02.jpg');"></div>
+            <div class="intro-slider-img" style="background-image: url('static/company/images/slides/slide-03.jpg');"></div>
         </div>
 
         <div class="grid-overlay">
