bug at image-upload page fixed

--- a/users/templates/users/image-upload.html
+++ b/users/templates/users/image-upload.html
@@ -16,7 +16,9 @@
             <video id="video">Video stream not available.</video>
             <button id="startbutton" onclick="">Take photo</button> 
         </div>
-        <button id="submitImage" type="button">Submit</button>
+        <div style="text-align:center;">
+            <button id="submitImage" class="btn btn-outline-info" type="button">Submit</button>
+        </div>
     </div>
     <script>
     submitImage = document.getElementById("submitImage");
