--- a/company/templates/company/index-slides.html
+++ b/company/templates/company/index-slides.html
@@ -285,7 +285,7 @@
                                         <h4>Need Web Hosting?</h4>
                                         <p>
                                         Need a great reliable web hosting?
-                                        We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
+                                        We highly recommend <a href="#0">DreamHost</a>.
                                         Powerful web and Wordpress hosting. Guaranteed. Starting at $2.95 per month.
                                         </p>
                                         <a href="https://www.dreamhost.com/r.cgi?287326" class="btn btn--stroke h-full-width">Get Started Now</a>
@@ -411,9 +411,9 @@
                                         <h4>Where to Find Us</h4>
                 
                                         <p>
-                                        1600 Amphitheatre Parkway<br>
-                                        Mountain View, CA<br>
-                                        94043 US
+                                        Lovely Professional Unviversity<br>
+                                        Phagwara, Punjab<br>
+                                        144411 IN
                                         </p>
                 
                                     </div>
@@ -431,10 +431,10 @@
                                 </div>
 
                                 <p class="tab-content__item-bottom">
-                                    <a href="mailto:#0" class="contact-email">hello@imminent.com</a>
+                                    <a href="mailto:hello@imminent.com" class="contact-email">hello@imminent.com</a>
                                     <span class="contact-number"> 
-                                        <a href="tel:197-543-2345">+197 543 2345</a>
-                                        <a href="tel:123-456-9000">+123 456 9000</a>
+                                        <a href="tel:197-543-2345">+91 79893 33846</a>
+                                        <a href="tel:123-456-9000">+91 83600 45920</a>
                                     </span>
                                 </p>
 
